<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient">

    <!--GUESS ONE-->
    <TextView
        android:id="@+id/guessNumOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/clearsans_bold"
        android:text="@string/guess_1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessNumOneAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/clearsans_bold"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guessNumOne"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessNumOneCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/clearsans_bold"
        android:text="@string/guess_1_check"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessNumOne" />

    <TextView
        android:id="@+id/guessNumOneCheckAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/clearsans_bold"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guessNumOneCheck"
        app:layout_constraintTop_toBottomOf="@+id/guessNumOneAnswer" />
    <!--GUESS ONE-->

    <!--GUESS TWO-->
    <TextView
        android:id="@+id/guessNumTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/clearsans_bold"
        android:text="@string/guess_2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessNumOneCheck" />

    <TextView
        android:id="@+id/guessNumTwoAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/clearsans_bold"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guessNumTwo"
        app:layout_constraintTop_toBottomOf="@+id/guessNumOneCheckAnswer" />

    <TextView
        android:id="@+id/guessNumTwoCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/clearsans_bold"
        android:text="@string/guess_2_check"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessNumTwo" />

    <TextView
        android:id="@+id/guessNumTwoCheckAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/clearsans_bold"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toEndOf="@+id/guessNumTwoCheck"
        app:layout_constraintTop_toBottomOf="@+id/guessNumTwoAnswer" />
    <!--GUESS TWO-->

    <!--GUESS THREE-->
    <TextView
        android:id="@+id/guessNumThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/clearsans_bold"
        android:text="@string/guess_3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessNumTwoCheck" />

    <TextView
        android:id="@+id/guessNumThreeAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/clearsans_bold"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guessNumThree"
        app:layout_constraintTop_toBottomOf="@+id/guessNumTwoCheckAnswer" />

    <TextView
        android:id="@+id/guessNumThreeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/clearsans_bold"
        android:text="@string/guess_3_check"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessNumThree" />

    <TextView
        android:id="@+id/guessNumThreeCheckAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/clearsans_bold"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guessNumThreeCheck"
        app:layout_constraintTop_toBottomOf="@+id/guessNumThreeAnswer" />
    <!--GUESS THREE-->

    <Button
        android:id="@+id/guessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#673AB7"
        android:fontFamily="@font/clearsans_bold"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/wordReveal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/clearsans_bold"
        android:text=""
        android:textSize="75sp"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/inputTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessNumThreeCheck" />

    <EditText
        android:id="@+id/inputTextBox"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:fontFamily="@font/clearsans_regular"
        android:hint="@string/enter_4_letter_guess_here"
        android:inputType="textPersonName"
        android:maxLength="4"
        android:text=""
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guessBtn"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#673AB7"
        android:fontFamily="@font/clearsans_bold"
        android:text="@string/reset"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/inputTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordReveal" />

</androidx.constraintlayout.widget.ConstraintLayout>
